--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mercadopago/sdk-react": "^0.0.17",
     "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
     "@mui/styled-engine-sc": "^6.0.0-alpha.6",
     "@reduxjs/toolkit": "^1.9.7",
+    "axios": "^1.6.7",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
