--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^8.1.3",
+    "react-transition-group": "^4.4.5",
     "styled-components": "^6.1.1"
   },
   "devDependencies": {
